# python-grpc-recommendations

./: .gitignore  README.md  docker-compose.yaml
marketplace/: .flaskenv  Dockerfile  app.py  config.py  marketplace.py  pyproject.toml  recommendations_pb2_grpc.py  requirements.txt
marketplace/templates/: homepage.html
recommendations/: Dockerfile  mock.py  pyproject.toml  recommendations.py  recommendations_pb2.py  requirements.txt
