[tool.poetry]
name = "recommendations"
version = "0.1.0"
description = ""
authors = ["Pedro Sousa <ppls2106@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
grpcio-tools = "^1.46.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
